5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1644_2703.log
== TEST (2019-04-09 16:46:28) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"

if (idade<18):
	mensagem = "nao_eleitor"
	print(mensagem.lower()) 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:46:59) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>==18):
	mensagem = "eleitor"

if (idade<18):
	mensagem = "nao_eleitor"
	print(mensagem.lower()) 
-- ERROR:
File "XXXX", line 2
    if (idade>==18):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:47:37) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	print(mensagem.lower()) 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:48:06) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"

else:
	mensagem = "nao_eleitor"
	print(mensagem) 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:48:17) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	print(mensagem) 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:48:46) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem) 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:49:55) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"
	
else:
	mensagem = "nao_eleitor"
print(mensagemlower()) 
-- EXECUTION TIME:
0.128985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2703/main.py", line 7, in <module>
    print(mensagemlower()) 
NameError: name 'mensagemlower' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:19) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"
	
else:
	mensagem = "nao_eleitor"
print(mensagemlower()) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(mensagemlower()) 
NameError: name 'mensagemlower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:30) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"
	
else:
	mensagem = "nao_eleitor"
print(mensagem.lower()) 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:35) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"
	
else:
	mensagem = "nao_eleitor"
print(mensagem.lower()) 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:39) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"
	
else:
	mensagem = "nao_eleitor"
print(mensagem.lower()) 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:50:43) 
-- CODE:
idade=int(input("Qual a sua idade? "))
if (idade>=18):
	mensagem = "eleitor"
	
else:
	mensagem = "nao_eleitor"
print(mensagem.lower()) 
-- EXECUTION TIME:
0.127346
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
